--- a/lprf-overlay.dts
+++ b/lprf-overlay.dts
@@ -4,7 +4,7 @@
 /* Overlay for LPRF transceiver on spi0.0 */
 
 / {
-	compatible = "brcm,bcm2835", "brcm,bcm2836", "brcm,bcm2708", "brcm,bcm2709";
+	compatible = "brcm,bcm2835", "brcm,bcm2836", "brcm,bcm2837", "brcm,bcm2708", "brcm,bcm2709";
 
 	fragment@0 {
 		target = <&spi0>;
